[package]
name = "reset-password-codes-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-is-alive-shared = { tag = "0.5.0", git = "https://github.com/MyJetTools/http-is-alive-shared.git" }

my-logger = { tag = "0.2.1", git = "https://github.com/MyJetTools/my-logger.git" }
my-seq-logger = { tag = "0.2.1", git = "https://github.com/MyJetTools/my-seq-logger.git" }

rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }

flurl = { tag = "0.4.0", git = "https://github.com/MyJetTools/fl-url.git" }

my-grpc-extensions = { tag = "0.4.0", git = "https://github.com/MyJetTools/my-grpc-extensions.git" }
my-grpc-server-macros = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-grpc-server-macros.git" }

my-settings-reader = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }

rand = "*"

my-telemetry = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-telemetry.git" }
my-telemetry-writer = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-telemetry-writer.git" }

tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
hyper = { version = "*", features = ["full"] }
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
prost = "*"
prost-types = "*"
anyhow = "*"
signal-hook = "*"
tokio-postgres = { version = "*" }
serde = "*"
serde_yaml = "*"
serde_derive = "*"
serde_postgres = "*"
tokio-pg-mapper = "*"
tokio-pg-mapper-derive = "*"
uuid = { version = "*", features = ["v4"] }
sha2 = "*"
async-trait = "*"
chrono = "*"
base64 = "*"
tokio-stream = "*"
futures-core = "*"

[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.0" }
