[package]
name = "reset-password-codes-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service-sdk = { tag = "0.2.5", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "grpc",
    "macros",
] }

rand = "*"

tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
prost = "*"
prost-types = "*"

serde = "*"
serde_yaml = "*"
serde_derive = "*"
serde_postgres = "*"
uuid = { version = "*", features = ["v4"] }
sha2 = "*"
async-trait = "*"
chrono = "*"
base64 = "*"
tokio-stream = "*"
futures-core = "*"

[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.0" }
